=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.1.6
 - Fixed:   Family_Nav - Possible "getLabel" error on certain indi's. (windmillway)
 - Changed: More aesthetic tidying up of Album Page Layout (fixed short table rows in IE) (windmillway)
 - Added:   Language support for Family navigator (ref. previous 2 entries). (windmillway)
 - Changed: General Tidying up of Family Navigator and associated nested tables (windmillway)
 - Added:   Half siblings support to Indi page "View Details of...", "View Album of..." Family_Navigator. (windmillway)
 - Fixed: [ 2087441 ] [3743] Bugs in edit_interface.php (wooc)
 - Changed: Allowed Lightbox enlarged image to show starred names as underlined in title (windmillway)
 - Fixed: Starred name problem - (introduced by svn 3755 and 3756) - (windmillway)
 - Fixed: [ 2082505 ] [3724] Indiv list diplay error (fisharebest)
 - Fixed: [ 1819502 ] Lightbox & Missing media file. (windmillway)
 - Fixed: [ 2079873 ] Fixed Charts ref line below (windmillway)
 - Fixed: [ 2079873 ] Names as media titles also now print double quotes (Nicknames) and do not truncate (windmillway)
 - Fixed: [ 1979072 ] and [ 1817168 ] Album Page now shows updated media (old and new) and removes edit menu from "old" item (windmillway)
 - Fixed: [ 2049164 ] ucwords is cultural bias (canajun2eh)
 - Fixed: [ 2038773 ] Concatenated data (CONC) splits UTF-8 characters (canajun2eh)
 - Fixed: [ 2028403 ] Age display glitch (fisharebest)
 - Fixed: [ 2034084 ] 3609 Find Family errors (fisharebest)
 - Added: [ 1923217 ] Google Translate API Addition to Language Tools (wooc)
 - Changed: Removed Portuguese (Brazil) language; replaced with Portuguese, using pt-br language files (canajun2eh)
 - Changed: Don't pollute log file with logs of known good spiders (canajun2eh)